--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@
 }
 
 .design-text{
-margin-left: 130px;
+    margin-left: 130px;
 }
 
 .text-head{
@@ -124,12 +124,14 @@ margin-left: 130px;
 }
 
 .text-about-me{
-    margin: 50px 520px;
+    margin: 50px 50px;
+    max-width: 496px;
     text-align: center;
 }
 
-.center{
-    padding: 0 calc(50%-1920/2);
+.about-me{
+    display: flex;
+    justify-content: center;
 }
 
 .projects{
@@ -221,6 +223,7 @@ margin-left: 130px;
     flex-direction: row;
     flex-wrap: wrap;
     display: flex;
+    justify-content: center;
 }
 
 .table-fig > img{
@@ -229,13 +232,118 @@ margin-left: 130px;
 }
 
 .table-fig > img:hover{
-    content: url(../img/Group\ 4\ \(1\).svg);
+    opacity: 0.5;
 }
 
 .table-item{
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    flex-direction: row;
     max-width: 1110px;
 }
+
+/* scrollbar */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    border-radius: 10px;
+}
+ 
+::-webkit-scrollbar-thumb {
+    background: #34547A; 
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #a6ccfb;
+}
+
+.microsoft-img{
+    width: 255px;
+    height: 120px;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.company{
+    display: flex;
+    justify-content: center;
+    margin-top: 72px;
+    margin-bottom: 100px;
+}
+
+.send-application-text{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.send-application{
+    background-color: #EEEFF1;
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.send-app-text-head{
+    font-size: 32px;
+}
+
+.send-app-text{
+    margin-bottom: 65px;
+}
+
+.form{
+    display: flex;
+    justify-content: center;
+
+}
+
+.textarea-form{
+    width: 506px;
+    height: 141px;
+    max-width: 540px;
+    max-height: 175px;
+    font-size: 14px;
+    color: #5F5D5D;
+    margin-top: 0px;
+    padding: 17px;
+    margin-top: 20px;
+    border: none;
+    border-radius: 5px;
+}
+
+.name-form{
+    width: 235px;
+    height: 50px;
+    font-size: 14px;
+    color: #5F5D5D;
+    margin-top: 0px;
+    border: none;
+    padding-left: 20px;
+    border-radius: 5px;
+}
+
+.email-form{
+    width: 235px;
+    height: 50px;
+    font-size: 14px;
+    color: #5F5D5D;
+    margin-top: 0px;
+    margin-left: 30px;
+    border: none;
+    padding-left: 20px;
+    border-radius: 5px;
+}
+
+.send-app-btn{
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+}
+
+.send-btn{
+    margin-top: 0px;
+}
+
+
+
